force-app/main/default/objects/ssot__CollectionPlan__dlm/fields/ssot__ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClosedDate__c</fullName>
    <label>Closed Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClosedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>