force-app/main/default/objects/ssot__CollectionPlan__dlm/fields/ssot__CollectedAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CollectedAmount__c</fullName>
    <label>Collected Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CollectedAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>