force-app/main/default/objects/ssot__CollectionPlan__dlm/fields/ssot__CollectionPlanReasonId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CollectionPlanReasonId__c</fullName>
    <label>Collection Plan Reason</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CollectionPlanReasonId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>