force-app/main/default/objects/ssot__CollectionPlan__dlm/fields/ssot__DaysPastDueNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__DaysPastDueNumber__c</fullName>
    <label>Days Past Due</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DaysPastDueNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>