force-app/main/default/objects/ssot__CollectionPlan__dlm/fields/ssot__FirstCallDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__FirstCallDateTime__c</fullName>
    <label>First Call Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FirstCallDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>