force-app/main/default/objects/ssot__CollectionPlan__dlm/fields/ssot__FirstEmailDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__FirstEmailDateTime__c</fullName>
    <label>First Email Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FirstEmailDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>