force-app/main/default/objects/ssot__CollectionPlan__dlm/fields/ssot__InitialDueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__InitialDueAmount__c</fullName>
    <label>Initial Due Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InitialDueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>