force-app/main/default/objects/ssot__CollectionPlan__dlm/fields/ssot__ReferenceContextObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferenceContextObject__c</fullName>
    <label>Reference Context Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferenceContextObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>