force-app/main/default/objects/ssot__CollectionPlan__dlm/fields/ssot__rel_1726825129992_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726825129992_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CollectionPlan_AccountId_map_Account_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>CollectionPlan_AccountId_map_Account_rel</relationshipLabel>
    <relationshipName>rel_1726825129992_end</relationshipName>
    <type>Lookup</type>
</CustomField>