force-app/main/default/objects/ssot__CollectionPlan__dlm/fields/ssot__RiskScore__c.field-meta.xml
<CustomField>
    <fullName>ssot__RiskScore__c</fullName>
    <label>Risk Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RiskScore</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>