force-app/main/default/objects/ssot__CollectionPlan__dlm/fields/ssot__TotalFeesAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalFeesAmount__c</fullName>
    <label>Total Fees Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalFeesAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>